# examples

./: .gitignore
api/: README.md  evm.js  package.json  pnpm-lock.yaml  solana.js
js/api-usage/: README.md  cli.js  package.json  pnpm-lock.yaml  questions.js  usage.js
js/api-usage/res/: banner.txt
python/api-usage/: pyproject.toml
python/api-usage/features/: bando_spending_protocol.feature
python/api-usage/features/steps/: api_products.py
web/catalog-playground/: README.md  bando-api-demo.js  index.html  package-lock.json  package.json  replit.md  server.js
web/catalog-playground/examples/: scenarios.js
web/catalog-playground/src/: App.jsx  main.jsx  theme.js
web/catalog-playground/src/components/: ApiFilters.jsx  ErrorMessage.jsx  Header.jsx  LoadingSpinner.jsx  ProductCard.jsx  ProductResults.jsx
web/catalog-playground/utils/: cache.js  formatters.js
