[tool.poetry]
name = "api-usage"
version = "0.1.0"
description = "Bando Spending Protocol API usage example"
authors = ["Bando"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
requests = "^2.32.2"
responses = "^0.25.3"
web3 = "^7.5.0"
solders = "^0.26.0"
solana = "^0.36.7"
behave = "^1.3.1"

[tool.poetry.group.dev.dependencies]
junit2html = "^31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
timeout = 30
timeout_method = "signal"
addopts = [
    "-vv",
    "--tb=short",
    "--durations=0",
    "--durations-min=1.0",
    "--timeout=30",
    "--timeout-method=signal",
    "--color=yes"
]

